--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
-    "express": "^4.18.2",
-    "moment": "^2.29.4"
+    "express": "^4.18.2"
   }
 }
