--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "epg-scrapper",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
