--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "private": true,
   "type": "commonjs",
   "scripts": {
-    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12",
-    "express": "^4.18.2"
+    "cheerio": "^1.0.0-rc.12"
   }
 }
