--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
 
       - uses: actions/checkout@v4
       - name: Checkout
-        if: steps.check.outputs.should_run == 'true'
+        if: steps.check.outputs.should_commit == 'true'
         run: |
           npm i
           node index.js docs/epg.xml
@@ -29,4 +29,4 @@ jobs:
           git config user.email github-actions@github.com
           git add docs/epg.xml
           git commit -m "generated epg $(date '+%Y-%m-%d %H:%M:%S')"
-          git push || exit 0
+          git push
