--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,12 @@ jobs:
       - run: |
           npm ci
           node index.js docs/epg.xml
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add docs/epg.xml
-          git commit -m "generated epg $(date '+%Y-%m-%d %H:%M:%S')"
-          git push
-          exit 0
+          if [ -n "$(git status --porcelain)" ]; then
+            git config user.name github-actions
+            git config user.email github-actions@github.com
+            git add docs/epg.xml
+            git commit -m "generated epg $(date '+%Y-%m-%d %H:%M:%S')"
+            git push
+          else
+            echo "Nothing to commit"
+          fi
