--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,7 @@
 name: Cron Action
 on:
   schedule:
-    - cron: '*/5 * * * *'
-    # - cron: '0 */6 * * *'
+    - cron: '0 */6 * * *'
 permissions:
   contents: write
 jobs:
