--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
           if [ -n "$(git status --porcelain)" ]; then
             git config user.name github-actions
             git config user.email github-actions@github.com
+            git pull
             git add docs/epg.xml
             git commit -m "generated epg $(date '+%Y-%m-%d %H:%M:%S')"
             git push
